--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,27 @@
 .header {
+  margin: 0 auto;
   padding: 28px 48px 56px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and (max-width: 1024px) {
+  .header {
+    padding: 28px 48px 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    padding: 28px 24px 48px;
+  }
+}
+
+
+@media screen and (max-width: 425px) {
+  .header {
+    padding: 16px 16px 48px;
+  }
+}
+
