--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,12 @@
 
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 
+@import url(../blocks/header/__lang-link/__lang-link_active/header__lang-link_active.css);
+
+
+
+@import url(../blocks/content/content.css);
+
 
 
 @import url(../blocks/lead/lead.css);
