--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,9 @@
 .page {
+  margin: auto;
   font-family: Inter, Arial, sans-serif;
   font-weight: 400;
   color: #fff;
-  background-color: #2A2C2F;
+  background-color: #2a2c2f;
   min-width: 320px;
   max-width: 1280px;
-  margin: auto;
 }
