--- a/pages/index.css
+++ b/pages/index.css
@@ -8,6 +8,12 @@
 
 @import url(../blocks/page/page.css);
 
+@import url(../blocks/page/__header/page__header.css);
+
+@import url(../blocks/page/__content/page__content.css);
+
+@import url(../blocks/page/__footer/page__footer.css);
+
 
 
 @import url(../blocks/header/header.css);
@@ -23,6 +29,8 @@
 
 
 @import url(../blocks/content/content.css);
+
+@import url(../blocks/content/__section/content__section.css);
 
 
 
