--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,11 +1,59 @@
 .place {
   display: grid;
-  grid-template-columns: 1fr 51%;
-  grid-template-rows: minmax(76px 152px) 1fr;
+  grid-template-columns: 460px 1fr;
+  grid-template-rows: min-content 1fr;/*minmax(1fr max-content);*/
   grid-template-areas:
     "title website"
     "image text";
   column-gap: 40px;
   row-gap: 48px;
   padding-bottom: 80px;
+
+}
+
+@media screen and (max-width: 1024px) {
+  .place {
+    column-gap: 32px;
+    grid-template-columns: 440px 1fr;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .place {
+    column-gap: 30px;
+    grid-template-columns: 390px 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place {
+    column-gap: 28px;
+    padding-bottom: 73px;
+    grid-template-columns: 340px 1fr;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .place {
+    column-gap: 24px;
+    grid-template-columns: 300px 1fr;
+  }
+}
+
+
+@media screen and (max-width: 600px) {
+  .place {
+    grid-template-areas:
+      "title"
+      "website"
+      "image"
+      "text";
+    row-gap: 32px;
+    padding-bottom: 50px;
+    grid-template-columns: 320px 1fr;
+  }
+}
+
+.place:last-child {
+  padding-bottom: 0;
 }
