--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -14,11 +14,23 @@
   z-index: 1;
 }
 
+@media screen and (max-width: 1024px) {
+  .cover__link {
+    min-height: 640px;
+  }
+}
 
-  /*
-  box-sizing: border-box;
-  padding: 20px;
-*/
+@media screen and (max-width: 768px) {
+  .cover__link {
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .cover__link {
+    min-height: 200px;
+  }
+}
 
 .cover__link::before {
   content: "";
@@ -36,14 +48,4 @@
 .cover__link:hover::before {
   opacity: 0.8;
 }
-
-
-
-
-
-
-
-
-
-
 
