--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,4 +3,19 @@
   line-height: 1.22;
   text-align: center;
   max-width: 360px;
+  margin: 0;
+}
+
+@media screen and (max-width: 600px) {
+  .cover__subtitle {
+    font-size: 15px;
+    line-height: 1.14;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
