--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,8 +1,22 @@
 .cover__title {
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
+  line-height: 1.06;
   text-align: center;
-  margin-bottom: 32px;
+  margin: 0 0 32px;
   max-width: 560px;
+}
+
+@media screen and (max-width: 600px) {
+  .cover__title {
+    font-size: 46px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 1.09;
+    margin: 0 0 16px;
+  }
 }
