--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,3 +3,10 @@
   line-height: 1.14;
   margin: 0;
 }
+
+@media screen and (max-width: 760px) {
+  .footer__copyright {
+    line-height: 1;
+    margin-top: 16px;
+  }
+}
