--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,6 +6,14 @@
   padding-right: 18px;
 }
 
+@media screen and (max-width: 760px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+    padding: 0 0 32px 0;
+  }
+}
+
 .footer__link:last-child {
   margin-right: 0;
 }
