--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,7 +1,11 @@
 .footer__links {
   display: flex;
   flex-direction: row;
-  text-decoration: none;
   justify-content: start;
+}
 
+@media screen and (max-width: 760px) {
+  .footer__links {
+    flex-direction: column;
+  }
 }
