--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,3 +7,12 @@
   box-sizing: border-box;
   padding: 0 48px 24px;
 }
+
+@media screen and (max-width: 760px) {
+  .footer {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 0 24px 16px;
+  }
+}
+
