--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,10 +1,11 @@
 .header__lang-link {
   text-decoration: none;
   color: #fff;
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 1.17;
   margin-right: 18px;
 }
 
@@ -15,7 +16,7 @@
 @media screen and (max-width: 425px) {
   .header__lang-link {
     font-size: 18px;
-    line-height: 20px;
+    line-height: 1.11;
   }
 }
 
