--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,7 @@
 .header {
-  width: calc(100% - 96px);
+  width: 100%;
+  padding: 0 48px;
+  box-sizing: border-box;
   max-width: 1184px;
   display: flex;
   justify-content: space-between;
@@ -8,12 +10,12 @@
 
 @media screen and (max-width: 768px) {
   .header {
-    width: calc(100% - 48px);
+    padding: 0 24px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .header {
-    width: calc(100% - 32px);
+    padding: 0 16px;
   }
 }
