--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,13 +1,14 @@
 .intro__title {
   margin: 0;
+  font-family: 'Inter', Arial, sans-serif;
   font-weight: 900;
   font-size: 54px;
-  line-height: 58px;
+  line-height: 1.07;
 }
 
 @media screen and (max-width: 425px) {
   .intro__title {
     font-size: 32px;
-    line-height: 35px;
+    line-height: 1.09;
   }
 }
