--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,17 +1,11 @@
 .lead__image {
+  box-sizing: border-box;
   width: 100%;
-  margin-top: 32px;
-  margin-bottom: 8px;
+  margin: 0 auto 8px;
 }
-
+/*
 @media screen and (max-width: 1024px) {
   .lead__image {
-    margin-top: 28px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .lead__image {
-    margin-top: 20px;
+    margin: 0 48px 8px;
   }
 }
