--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,24 +1,32 @@
 .lead__subtitle {
-  margin: 16px auto 32px;
+  margin: 0 auto 64px;
+  width: 100%;
   max-width: 640px;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 30px;
-  line-height: 36px;
+  line-height: 1.2;
   text-align: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__subtitle {
+    margin-bottom: 56px;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .lead__subtitle {
-    max-width: 420px;
+    max-width: 500px;
     font-size: 20px;
-    line-height: 24px;
+    margin-bottom: 40px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .lead__subtitle {
-    margin: 8px auto 20px;
     max-width: 288px;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 1.25;
   }
 }
+
