--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,28 +1,28 @@
 .lead__title {
-  margin: 0 auto 16px;
-  width: calc(100% - 48px);
+  margin: 0 auto 32px;
+  box-sizing: border-box;
+  width: 100%;
   max-width: 720px;
+  padding: 0;
+  font-family: 'Inter', Arial, sans-serif;
   font-weight: 900;
   font-size: 96px;
-  line-height: 100px;
+  line-height: 1.04;
   text-align: center;
-}
+  }
 
 @media screen and (max-width: 767px) {
   .lead__title {
-    margin-bottom: 8px;
-    max-width: 400px;
+    margin-bottom: 16px;
     font-size: 52px;
-    line-height: 52px;
+    max-width: 600px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .lead__title {
-    margin-bottom: 8px;
+    line-height: 1.1;
     max-width: 288px;
-    width: calc(100% - 32px);
     font-size: 40px;
-    line-height: 44px;
   }
 }
