--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,10 +1,12 @@
 .lead {
-  max-width: 984px;
   box-sizing: border-box;
+  width: 100%;
+  padding: 0 48px 0 48px;
+  max-width: 1184px;
 }
 
-@media screen and (max-width: 1024px) {
-  .lead{
-    max-width: 928px;
+@media screen and (max-width: 768px) {
+  .lead {
+    padding: 0;
   }
 }
