--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,4 +1,35 @@
 .place__image {
   grid-area: image;
   max-width: 460px;
+  min-width: 100%;
+}
+
+@media screen and (max-width: 1024px) {
+  .place__image {
+    max-width: 440px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .place__image {
+    max-width: 390px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__image {
+    max-width: 340px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .place__image {
+    max-width: 300px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .place__image {
+    max-width: 320px;
+  }
 }
