--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,4 +1,22 @@
 .place__paragraph {
   font-size: 18px;
-  line-height: 1.63
+  line-height: 1.63;
+  margin: 0 0 26px;
 }
+
+@media screen and (max-width: 1024px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .place__paragraph {
+    padding: 0 16px 0 16px;
+  }
+}
+
+.place__paragraph:last-child {
+  margin: 0;
+}
+
