--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,9 +1,32 @@
 .place__title {
+  max-width: 460px;
   margin: 0;
   grid-area: title;
+  font-family: 'Inter', Arial, sans-serif;
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
+  line-height: 1.06;
   justify-items: start;
   align-items: start;
+}
+
+@media screen and (max-width: 900px) {
+  .place__title {
+    font-size: 58px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .place__title {
+    padding: 0 16px 0 16px;
+    font-size: 32px;
+    line-height: 1.09;
+  }
 }
