--- a/blocks/place/_text/place_text.css
+++ b/blocks/place/_text/place_text.css
@@ -1,3 +1,28 @@
 .place_text {
   grid-area: text;
+  max-width: 484px;
+}
+
+@media screen and (max-width: 1024px) {
+  .place_text {
+    max-width: 456px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .place_text {
+    max-width: 398px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place_text {
+    max-width: 340px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .place_text {
+    max-width: 320px;
+  }
 }
