--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,7 +1,44 @@
 .places {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   max-width: 984px;
   list-style-type: none;
-  padding: 0;
+  box-sizing: content-box;
+  padding: 0 48px 92px 48px;
+}
+
+@media screen and (max-width: 1024px) {
+  .places {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .places {
+    max-width: 852px;
+    padding: 0 36px 92 36px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places {
+    max-width: 720px;
+    padding: 0 24px 90px 24px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .places {
+    max-width: 650px;
+    padding: 0 20px 90 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .places {
+    max-width: 320px;
+    padding: 0 20px 90 20px;
+    margin: auto;
+  }
 }
