--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,7 @@
 .place {
   display: grid;
   grid-template-columns: 460px 1fr;
-  grid-template-rows: min-content 1fr;/*minmax(1fr max-content);*/
+  grid-template-rows: min-content 1fr;
   grid-template-areas:
     "title website"
     "image text";
