На проверку после исправлений

--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -50,7 +50,7 @@
       "text";
     row-gap: 32px;
     padding-bottom: 50px;
-    grid-template-columns: 320px 1fr;
+    grid-template-columns: 1fr;
   }
 }
 
