--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -1,4 +1,4 @@
-.cover__link {
+.cover__item {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,25 +14,7 @@
   z-index: 1;
 }
 
-@media screen and (max-width: 1024px) {
-  .cover__link {
-    min-height: 640px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover__link {
-    min-height: 480px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .cover__link {
-    min-height: 200px;
-  }
-}
-
-.cover__link::before {
+.cover__item::before {
   content: "";
   background: #2a2c2f;
   opacity: 0.3;
@@ -45,7 +27,24 @@
   transition: 0.7s;
 }
 
-.cover__link:hover::before {
+.cover__item:hover::before {
   opacity: 0.8;
 }
 
+@media screen and (max-width: 1024px) {
+  .cover__item {
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__item {
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .cover__item {
+    min-height: 200px;
+  }
+}
