--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 600px) {
   .cover__subtitle {
-    font-size: 15px;
+    font-size: 14px;
     line-height: 1.14;
   }
 }
@@ -17,5 +17,6 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 1.14;
+    max-width: 288px;
   }
 }
