--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,17 +3,16 @@
   color: #fff;
   font-size: 16px;
   line-height: 1.12;
-  padding-right: 18px;
+  transition: opacity 0.3s
+}
+
+.footer__link:hover {
+  opacity: 0.5;
 }
 
 @media screen and (max-width: 760px) {
   .footer__link {
     font-size: 24px;
     line-height: 1;
-    padding: 0 0 32px 0;
   }
-}
-
-.footer__link:last-child {
-  margin-right: 0;
 }
