--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,11 +1,16 @@
 .footer__links {
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: space-between;
+  max-width: 465px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 760px) {
   .footer__links {
     flex-direction: column;
+    padding-bottom: 48px;
   }
 }
