--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,6 +7,11 @@
   font-size: 24px;
   line-height: 1.17;
   margin-right: 18px;
+  transition: opacity 0.3s
+}
+
+.header__lang-link {
+  opacity: 0.5;
 }
 
 .header__lang-link:last-child {
