--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,6 @@
 .intro__title {
   margin: 0;
+  padding-bottom: 40px;
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 900;
   font-size: 54px;
