--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,30 +1,32 @@
 .intro {
-  margin-left: 148px;
+  margin-left: 0;
+  padding: 0 148px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: start;
+  box-sizing: content-box;
+  width: 100%;
   max-width: 690px;
   min-height: 429px;
 }
 
 @media screen and (max-width: 1024px) {
   .intro {
-    margin-left: 48px;
+    padding: 0 48px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .intro {
-    margin-left: 24px;
     max-width: 720px;
+    padding: 0 24px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .intro {
-    margin-left: 16px;
     max-width: 288px;
     min-height: 754px;
+    padding: 0 16px;
   }
 }
