--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,8 +1,8 @@
 .lead {
   box-sizing: border-box;
   width: 100%;
-  padding: 0 48px 0 48px;
-  max-width: 1184px;
+  padding: 0 48px;
+  max-width: 1080px;
 }
 
 @media screen and (max-width: 768px) {
