--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,30 +1,37 @@
 .photo-grid {
-  max-width: 1184px;
+  margin: 0;
+  margin-bottom: 92px;
+  max-width: 1280px;
+  box-sizing: border-box;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
   gap: 16px;
   padding: 0 48px;
 }
 
 @media screen and (max-width: 1024px) {
   .photo-grid {
-    max-width: 928px;
+    max-width: 1024px;
     gap: 14px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid {
-    max-width: 720px;
+    max-width: 768px;
     gap: 16px;
+    grid-template-columns: repeat(auto-fit, minmax(231px, 1fr));
     padding: 0 24px;
+    margin-bottom: 88px;
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 350px) {
   .photo-grid {
-    max-width: 288px;
+    max-width: 350px;
     gap: 12px;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
     padding: 0 16px;
+    margin-bottom: 64px;
   }
 }
