--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,7 +3,7 @@
   color: #fff;
   font-size: 16px;
   line-height: 1.12;
-  transition: opacity 0.3s
+  transition: opacity 0.3s;
 }
 
 .footer__link:hover {
