--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,10 +7,10 @@
   font-size: 24px;
   line-height: 1.17;
   margin-right: 18px;
-  transition: opacity 0.3s
+  transition: opacity 0.3s;
 }
 
-.header__lang-link {
+.header__lang-link:hover {
   opacity: 0.5;
 }
 
