--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -2,7 +2,7 @@
   font-size: 18px;
   line-height: 1.22;
   color: #fff;
-  transition: opacity 0.3s
+  transition: opacity 0.3s;
 }
 
 .place__link:hover {
