--- a/blocks/content/__places/content__places.css
+++ b/blocks/content/__places/content__places.css
@@ -1,4 +1,7 @@
 .content__places {
+  width: 100%;
+  max-width: 984px;
+  box-sizing: border-box;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
 }
