--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,16 +3,23 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  max-width: 1280px;
   width: 100%;
   box-sizing: border-box;
   padding: 0 48px 24px;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 0 24px 24px;
+  }
 }
 
 @media screen and (max-width: 760px) {
   .footer {
     flex-direction: column;
     align-items: flex-start;
-    padding: 0 0 24px 16px;
+    padding: 0 16px 24px;
   }
 }
 
