--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,9 +4,9 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  box-sizing: content-box;
+  box-sizing: border-box;
   width: 100%;
-  max-width: 690px;
+  max-width: 986px;
   min-height: 429px;
 }
 
