--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,28 +1,6 @@
-.place_text {
+.place__text {
   grid-area: text;
   max-width: 484px;
-}
-
-@media screen and (max-width: 1024px) {
-  .place_text {
-    max-width: 456px;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .place_text {
-    max-width: 398px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .place_text {
-    max-width: 340px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .place_text {
-    max-width: 320px;
-  }
+  width: 100%;
+  box-sizing: border-box;
 }
