--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,10 @@
 .place__url-heading {
+  margin: 0 0 12px 0;
   font-size: 12px;
   line-height: 1.7;
+  font-weight: 400;
+  letter-spacing: 2px;
+  color: #aaa;
 }
 
 @media screen and (max-width: 768px) {
