--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,10 +2,11 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  max-width: 984px;
+  max-width: 1280px;
+  width: 100%;
   list-style-type: none;
-  box-sizing: content-box;
-  padding: 0 48px 92px 48px;
+  box-sizing: border-box;
+  padding: 0 48px 92px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -16,28 +17,24 @@
 
 @media screen and (max-width: 900px) {
   .places {
-    max-width: 852px;
-    padding: 0 36px 92px 36px;
+    padding: 0 36px 92px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .places {
-    max-width: 720px;
-    padding: 0 24px 90px 24px;
+    padding: 0 24px 90px;
   }
 }
 
 @media screen and (max-width: 680px) {
   .places {
-    max-width: 650px;
-    padding: 0 20px 90px 20px;
+    padding: 0 20px 90px;
   }
 }
 
 @media screen and (max-width: 600px) {
   .places {
-    max-width: 600px;
     padding: 0;
     margin: 0 auto 66px;
   }
