--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,8 @@
 
 @import url(../blocks/header/__logo/header__logo.css);
 
+@import url(../blocks/header/__lang/header__lang.css);
+
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 
 @import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
@@ -59,6 +61,8 @@
 
 
 @import url(../blocks/photo-grid/photo-grid.css);
+
+@import url(../blocks/photo-grid/__list/photo-grid__list.css);
 
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
